Try to fix (again x5) table right column's text size weid behavior on mobile's desktop mode

--- a/themes/lost-theme/assets/css/main.css
+++ b/themes/lost-theme/assets/css/main.css
@@ -1104,8 +1104,8 @@ table {
 	width: 100%;
 	margin-bottom: 8px;
 	font-size: smaller;
-	font-size: clamp(0.5em, 4.5cqw, 1em);
-	line-height: clamp(1.16em, 4.5cqw, 1.33em);
+	font-size: clamp(0.5rem, 4.5cqi, 1rem);
+	line-height: clamp(1.16rem, 4.5cqi, 1.33rem);
 	/*border-collapse: collapse;*/
 	border-spacing: 0;
 	border-radius: var(--round);
